# tink-homebank-endpoint

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_scheduler
.github/workflows/: build.yml
app/: main.py
app/notifications/: notifications.py
app/storage/: storage.py
scripts/: scheduler.py
templates/: importer_configuration.json
tests/: test_base.py  test_main.py
