[tool.poetry]
name = "app"
version = "0.0.1"
description = "Pull transactions from Tink and export them in a CSV for Firefly"
authors = ["José Ignacio Amelivia Santiago <ohcan2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
fastapi = "^0.110.0"
tink-http-python = "1.2.3"
gunicorn = "^21.2.0"
uvicorn = "^0.27.1"
httpx = "^0.27.0"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pudb = "^2024.1"
codecov = "^2.1.13"
black = "^24.3.0"
pre-commit = "^3.6.2"
mock = "^5.1.0"

[tool.poetry.scripts]
scheduler = "scripts.scheduler:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
